--- a/index.html
+++ b/index.html
@@ -10,5 +10,22 @@
     <img src="image1.jpg" id="image1" onclick="changeImage('image1')">
     <img src="image2.jpg" id="image2" onclick="changeImage('image2')">
     <!-- 添加更多图片和相应的ID和点击事件 -->
+<script>
+    function changeImage(imageId) {
+        // 获取OBS展示的目标图片元素
+        const obsImageElement = document.getElementById('obsImage');
+
+        // 获取点击的图片元素
+        const clickedImageElement = document.getElementById(imageId);
+
+        // 获取点击的图片路径
+        const imagePath = clickedImageElement.getAttribute('src');
+
+        // 更新OBS展示的目标图片路径
+        obsImageElement.setAttribute('src', imagePath);
+    }
+</script>
+
+
 </body>
 </html>
