--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 </head>
 <body>
     <!-- 用于OBS展示的目标图片 -->
-    <img src="default_image.jpg" id="obsImage">
+    <img src="f.png" id="obsImage">
 
     <!-- 点击其他图片触发切换目标图片 -->
-    <img src="image1.jpg" id="image1" onclick="changeImage('image1')">
-    <img src="image2.jpg" id="image2" onclick="changeImage('image2')">
+    <img src="d.png" id="image1" onclick="changeImage('image1')">
+    <img src="e.png" id="image2" onclick="changeImage('image2')">
     <!-- 添加更多图片和相应的ID和点击事件 -->
 <script>
     function changeImage(imageId) {
