--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
     <h1>Click on the images to view the selected image:</h1>
     <div id="imageGallery">
-        <img src="image1.jpg" onclick="selectImage('image1.jpg')">
-        <img src="image2.jpg" onclick="selectImage('image2.jpg')">
+        <img src="d.png" onclick="selectImage('d.png')">
+        <img src="f.png" onclick="selectImage('f.png')">
         <!-- Add more images here with unique paths -->
     </div>
 
